--- a/public/index.html
+++ b/public/index.html
@@ -46,9 +46,8 @@
   <script>
     if("serviceWorker" in navigator) {
       window.addEventListener("load", () => {
-        navigator.serviceWorker.register('service-worker.js')
-        .then(reg => {
-          console.log("We found your service wworker file!", reg);
+        navigator.serviceWorker.register("service-worker.js").then(reg => {
+          console.log("We found your service worker file!", reg);
         });
       });
     }
